Revise wording in 3.0.0 release notes regarding harvesters being removed and upgrading of solr